--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="">
         @*<h1>Registrar - @Model.UserName</h1>*@
-        <form asp-action="Register" method="post" class="form-horizontal">
+        <form asp-action="Register" method="post">
             <div class="form-group">
                 <label asp-for="UserName" class="col-md-2 control-label"></label>
                 <div class="col-md-10">
@@ -24,7 +24,7 @@
                     <input asp-for="Password" class="form-control" />
                     @*<span asp-validation-for="Password" class="text-danger"></span>*@
                 </div>
-            </div> 
+            </div>
 
             <div class="form-group">
                 <label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>
@@ -32,6 +32,7 @@
                     <input asp-for="ConfirmPassword" class="form-control" />
                 </div>
             </div>
+            <input asp-route="" type="submit" class="">
         </form>
     </div>
 </div>
